--- a/moot/src/main/resources/application.properties
+++ b/moot/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
